feat: create application documentation
