# src/modules/oracle/infra/entities/Profile.ts
@@ -1,4 +1,5 @@
 export class Profile {
+  environment?: string
   id: string
   firstName: string
   lastName: string
